# ssht

./: .coveragerc  .flake8  .pre-commit-config.yaml  .pyup.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  labels.yml
.github/workflows/: requirements.txt  test.yml
ssht/: plugins.py  ssht.py
tests/: test_host.py  test_parser.py  test_ssht.py
