[tool.poetry]
name = "ssht"
version = "1.0.0"
description = "SSH client wrapper for easily connecting to hosts"
authors = ["Henk Kraal <hkraal@users.noreply.github.com>"]
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: System Administrators',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Topic :: System :: Shells',
        'Topic :: Utilities',
]

readme = "README.md"
packages = [
    {include = "ssht"}
]

[tool.poetry.scripts]
ssht = "ssht.ssht:main"

[tool.poetry.dependencies]
python = "^3.8.1|^3.9|^3.10|^3.11"
mysql-connector = "^2.2.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5"
black = "^23.12.0"
blacken-docs = "^1.16.0"
codespell = "^2.2.6"
flake8-docstrings = "^1.7.0"
pylint = "^3.0.3"
pre-commit-hooks = "^4.5.0"
pyupgrade = "^3.15.0"


[tool.pylint.messages_control]
disable= [
    "too-few-public-methods",
]

[tool.pylint.FORMAT]
max-line-length=100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
