[tool.poetry]
name = "ssht"
version = "2.0.1"
description = "SSH client wrapper for easily connecting to hosts"
authors = ["Henk Kraal <hkraal@users.noreply.github.com>"]
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: System Administrators',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Topic :: System :: Shells',
        'Topic :: Utilities',
]

readme = "README.md"
packages = [
    {include = "ssht"}
]

[tool.poetry.scripts]
ssht = "ssht.ssht:main"

[tool.poetry.dependencies]
python = ">3.9.1,<3.14"
mysql-connector = "^2.2.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<9.0.0"
pytest-mock = "^3.12.0"
pytest-cov = ">=4.1,<7.0"
poetry = ">=1.8.3,<3.0.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
